// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreupgradeReportsHelpers should collect ids for job invocation 1`] = `
Object {
  "entryIds": Array [],
  "hostIds": Array [],
}
`;

exports[`PreupgradeReportsHelpers should detect a fixable entry in reports 1`] = `true`;

exports[`PreupgradeReportsHelpers should detect empty object 1`] = `true`;

exports[`PreupgradeReportsHelpers should detect entry is fixable 1`] = `true`;

exports[`PreupgradeReportsHelpers should detect entry is not fixable when not having a command 1`] = `false`;

exports[`PreupgradeReportsHelpers should detect entry is not fixable when not having remediations 1`] = `false`;

exports[`PreupgradeReportsHelpers should detect no entry is fixable 1`] = `false`;

exports[`PreupgradeReportsHelpers should detect non-empty object 1`] = `false`;

exports[`PreupgradeReportsHelpers should filter entries by host 1`] = `
Array [
  Object {
    "hostname": "foo.example.com",
    "id": 44,
    "severity": "high",
    "title": "Octocat is not happy",
  },
  Object {
    "hostname": "foo.example.com",
    "id": 45,
    "severity": "low",
    "title": "Not enough credits",
  },
  Object {
    "hostname": "foo.example.com",
    "id": 46,
    "severity": "medium",
    "title": "SELinux is turned off",
  },
  Object {
    "hostname": "foo.example.com",
    "id": 47,
    "severity": "medium",
    "title": "Root password is too short",
  },
  Object {
    "hostname": "foo.example.com",
    "id": 49,
    "severity": "high",
    "title": "No chocolate chip cookies in cookie jar",
  },
]
`;

exports[`PreupgradeReportsHelpers should filter entries by remediations 1`] = `
Array [
  Object {
    "detail": Object {
      "remediations": Array [
        Object {
          "type": "command",
        },
      ],
    },
    "severity": "high",
    "title": "Octocat is not happy",
  },
]
`;

exports[`PreupgradeReportsHelpers should filter entries by severity 1`] = `
Array [
  Object {
    "hostname": "host.example.com",
    "id": 43,
    "severity": "medium",
    "title": "I am broken too",
  },
  Object {
    "hostname": "foo.example.com",
    "id": 46,
    "severity": "medium",
    "title": "SELinux is turned off",
  },
  Object {
    "hostname": "foo.example.com",
    "id": 47,
    "severity": "medium",
    "title": "Root password is too short",
  },
]
`;

exports[`PreupgradeReportsHelpers should filter entries by title 1`] = `
Array [
  Object {
    "hostname": "host.example.com",
    "id": 43,
    "severity": "medium",
    "title": "I am broken too",
  },
]
`;

exports[`PreupgradeReportsHelpers should return entries page 1`] = `
Array [
  Object {
    "hostname": "foo.example.com",
    "id": 45,
    "severity": "low",
    "title": "Not enough credits",
  },
  Object {
    "hostname": "foo.example.com",
    "id": 46,
    "severity": "medium",
    "title": "SELinux is turned off",
  },
  Object {
    "hostname": "foo.example.com",
    "id": 47,
    "severity": "medium",
    "title": "Root password is too short",
  },
]
`;

exports[`PreupgradeReportsHelpers should return flattened entrues 1`] = `
Array [
  Object {
    "hostname": "host.example.com",
    "id": 42,
    "severity": "Too severe to talk about",
    "title": "Fix me!",
  },
  Object {
    "hostname": "host.example.com",
    "id": 43,
    "severity": "medium",
    "title": "I am broken too",
  },
  Object {
    "hostname": "foo.example.com",
    "id": 44,
    "severity": "high",
    "title": "Octocat is not happy",
  },
  Object {
    "hostname": "foo.example.com",
    "id": 45,
    "severity": "low",
    "title": "Not enough credits",
  },
  Object {
    "hostname": "foo.example.com",
    "id": 46,
    "severity": "medium",
    "title": "SELinux is turned off",
  },
  Object {
    "hostname": "foo.example.com",
    "id": 47,
    "severity": "medium",
    "title": "Root password is too short",
  },
  Object {
    "hostname": "foo.example.com",
    "id": 49,
    "severity": "high",
    "title": "No chocolate chip cookies in cookie jar",
  },
]
`;
